<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arrow_image"
    tools:context=".RegistrationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="-40dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="REGISTRATION"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please log in with your information."
                android:alpha="0.5"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_name"
                android:textStyle="bold"
                android:alpha="0.5"/>

            <EditText
                android:id="@+id/new_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/name_done"
                android:hint="Enter your name"
                android:inputType="text"
                android:minHeight="48dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:alpha="0.5"/>

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/password_icon"
                android:hint="Enter a new password"
                android:inputType="text"
                android:minHeight="48dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/error"
                    android:text="@string/error_logging"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/red"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:id="@+id/loading"
                    android:layout_marginStart="220dp"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/submit_reg"
                android:id="@+id/registrationSubmit"
                app:cornerRadius="32dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="Back to Login"
                android:id="@+id/loginRedirect"
                android:backgroundTint="@color/my_secondary"
                app:cornerRadius="32dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>

